--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "purescript-orders": "^3.0.0"
   },
   "devDependencies": {
-    "purescript-psci-support": "^3.0.0"
+    "purescript-psci-support": "^3.0.0",
+    "purescript-random": "^3.0.0"
   }
 }
