--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,15 @@
     "purescript-transformers": "^3.2.0",
     "purescript-sets": "^3.0.0",
     "purescript-identity": "^3.1.0",
-    "purescript-orders": "^3.0.0"
+    "purescript-orders": "^3.0.0",
+    "purescript-arrays": "^4.0.1",
+    "purescript-strings": "^3.1.0",
+    "purescript-foldable-traversable": "^3.0.0",
+    "purescript-integers": "^3.0.0",
+    "purescript-tuples": "^4.0.0",
+    "purescript-either": "^3.0.0",
+    "purescript-functions": "^3.0.0",
+    "purescript-monoid": "^3.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
