--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,10 @@
     "purescript-tuples": "^4.0.0",
     "purescript-either": "^3.0.0",
     "purescript-functions": "^3.0.0",
-    "purescript-monoid": "^3.0.0"
+    "purescript-monoid": "^3.0.0",
+    "purescript-validation": "^3.0.0",
+    "purescript-eff": "^3.1.0",
+    "purescript-react": "^3.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
