--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "purescript-monoid": "^3.0.0",
     "purescript-validation": "^3.0.0",
     "purescript-eff": "^3.1.0",
-    "purescript-react": "^3.0.0"
+    "purescript-react": "^3.0.0",
+    "purescript-exceptions": "^3.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
