--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "purescript-validation": "^3.0.0",
     "purescript-eff": "^3.1.0",
     "purescript-react": "^3.0.0",
-    "purescript-exceptions": "^3.0.0"
+    "purescript-exceptions": "^3.0.0",
+    "purescript-dom": "^4.3.1"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
